fixed pre element overflowing it container

--- a/src/app.css
+++ b/src/app.css
@@ -84,6 +84,7 @@ main {
   padding-bottom: 4rem;
   overflow-y: auto;
   margin-top: 5rem;
+  max-width: 100%;
   max-height: 65vh;
 }
 .odd {
@@ -93,6 +94,7 @@ main {
   font-size: 0.8rem;
   align-self: flex-end;
   line-height: 1.6;
+  max-width: 100%;
 }
 
 .even {
@@ -101,8 +103,9 @@ main {
   border-radius: 10px;
   font-size: 0.8rem;
   align-self: flex-start;
-
+  flex-shrink: 1;
   line-height: 1.6;
+  max-width: 100%;
 }
 
 .message-container {
@@ -184,4 +187,9 @@ textarea {
   .odd {
     margin-left: 0;
   }
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
